# fritzhome-cache

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE.txt  README.md  instructions.md
cmake/: toolchain-aarch64.cmake  toolchain-raspbian-aarch64.cmake  toolchain-raspbian-armhf.cmake  toolchain-raspbian-bullseye-armhf.cmake
data/: fritzhome-cache.conf  fritzhome-cache.service
data/debian/: conffiles  postinst  postrm  prerm
data/rpm/: postinst.sh  postun.sh  preun.sh
docker/: Dockerfile.debian  Dockerfile.raspbian-aarch64  Dockerfile.raspbian-armhf  Dockerfile.raspbian-bullseye-armhf  Dockerfile.tumbleweed  Dockerfile.tumbleweed-aarch64  build.sh
src/: cache.cpp  cache.h  config.h  fritzClient.cpp  fritzClient.h  logger.cpp  logger.h  main.cpp  router.cpp  router.h  server.cpp  server.h  types.h
